; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/pmod/extr_tcpmod.c_tcpmod_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/pmod/extr_tcpmod.c_tcpmod_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip_fw_chain = type { i32 }

@ipfw_tcpmod = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"tcp-setmss\00", align 1
@V_tcpmod_setmss_eid = common dso_local global i64 0, align 8
@ENXIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tcpmod_init(%struct.ip_fw_chain* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ip_fw_chain*, align 8
  %5 = alloca i32, align 4
  store %struct.ip_fw_chain* %0, %struct.ip_fw_chain** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.ip_fw_chain*, %struct.ip_fw_chain** %4, align 8
  %7 = load i32, i32* @ipfw_tcpmod, align 4
  %8 = call i64 @ipfw_add_eaction(%struct.ip_fw_chain* %6, i32 %7, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  store i64 %8, i64* @V_tcpmod_setmss_eid, align 8
  %9 = load i64, i64* @V_tcpmod_setmss_eid, align 8
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @ENXIO, align 4
  store i32 %12, i32* %3, align 4
  br label %14

13:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %14

14:                                               ; preds = %13, %11
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i64 @ipfw_add_eaction(%struct.ip_fw_chain*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
